# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  helpers.AccountAdd:
+    properties:
+      balance:
+        type: number
+      name:
+        type: string
+      surname:
+        type: string
+    type: object
   helpers.AccountSuccess:
     properties:
       balance:
@@ -74,7 +83,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/models.Account'
+          $ref: '#/definitions/helpers.AccountAdd'
       produces:
       - application/json
       responses:
